Añadido el control del usuario al borrar y modificar una categoria, se modifica YAML y validaciones para dicho fin
